--- a/mainstyle.css
+++ b/mainstyle.css
@@ -27,3 +27,37 @@
     border-collapse: collapse;
     width: 78%;
 }
+
+.medicamentos{
+    background: white;
+    position: absolute;
+    left: 10%;
+    top: 60%;
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 78%;
+}
+
+.titulo1{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
+
+.titulo2{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+}
+
+.btnCitas{
+    position: absolute;
+    top: 45%;
+    left: 10%;
+}
+
+.btnMeds{
+    position: absolute;
+    top: 85%;
+    left: 10%;
+}
