--- a/crstyle.css
+++ b/crstyle.css
@@ -49,3 +49,16 @@
     bottom: 5%;
     left: 40%;
 }
+
+.citas{
+    background: white;
+    position: absolute;
+    left: 10%;
+    top: 70%;
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 78%;
+    border-color: black;
+    border-radius: 20px;
+    border-style: solid;
+}
