--- a/css/crstyle.css
+++ b/css/crstyle.css
@@ -56,7 +56,7 @@
     background: white;
     position: absolute;
     left: 10%;
-    top: 70%;
+    top: 77%;
     border: 1px solid black;
     border-collapse: collapse;
     width: 78%;
@@ -80,4 +80,52 @@
 .btn_enviar:hover{
     border-color: white;
     font-style: bright;
+}
+.seccion1{
+    display: flex;
+}
+.caja {	
+    border:1px solid #d9d9d9;
+    height:30px;
+    margin-left: 24%;
+    overflow: hidden;
+    width: 170px;
+    position:relative;
+    border-style: solid;    
+ }
+ select {
+    background-color: white;
+    color: black;
+    border: none;
+    font-size: 14px;
+    height: 30px;
+    padding: 5px;
+    width: 170px
+    
+ }
+ select:focus{ outline: none;}
+ 
+ .caja::after{
+     content:"\025be";
+     display:table-cell;
+     padding-top:7px;
+     text-align:center;
+     width:30px;
+     height:30px;
+     background-color:#d9d9d9;
+     position:absolute;
+     top:0;
+     right:0px;	
+     pointer-events: none;
+ }
+ .foto{
+    border-color: black;
+    height: 25%;
+    width: 100%;
+}
+.foto img{
+    height: 150px;
+    width: 150px;
+    border-style: solid;
+    border-radius: 80px;
 }
