--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 .app{
+  border-style: solid;
     width:380px;
     height:665px;
     background: rgb(255,255,255);
@@ -33,7 +34,9 @@
   bottom: 20%;
   left: 23%;
 }
-
+h2{
+  color: white;
+}
 .inicio{
   position: absolute;
   text-align: center;
@@ -42,9 +45,10 @@
 }
 
 .botonesIni{
-  position: absolute;
   bottom: 30%;
   left: 30%;
+  height: 25%;
+  margin-top: 100%;
 }
 
 .botonesReg{
@@ -53,8 +57,129 @@
   left: 30%;
 }
 
-.RegtoIni{
+.registroIni{
+  background-color: transparent;
+  color: white;
+  border-style: none;
+  margin-top: 30px;
+  margin-left: 28%;
+  text-decoration-line: underline;
+  cursor: pointer;
+}
+.registroIni:hover{
+  color: #4C69BA;
+}
+.RegtoIni:hover{
+  color: white;
+}
+.btn_login{
+  cursor: pointer;
+  height: 35px;
+  width: 200px;
+  border-radius: 20px;
+  color: black;
+  font-weight: bold;
+  border-style: solid;
+  background: rgb(255,255,255);
   position: absolute;
-  bottom: 5%;
-  left: 25%;
+  border-color: black;
+  margin-top: 10%;
+  margin-left: 22%;
+}
+.btn_login:hover{
+  border-color: white;
+  font-style: bright;
+}
+.btn_register{
+  cursor: pointer;
+  height: 35px;
+  width: 200px;
+  border-radius: 20px;
+  color: black;
+  font-weight: bold;
+  border-style: solid;
+  background: rgb(255,255,255);
+  position: absolute;
+  border-color: black;
+  margin-top: 10%;
+  margin-left: 22%;
+}
+.btn_register:hover{
+  border-color: white;
+  font-style: bright;
+}
+.loginBtn {
+  cursor: pointer;
+  box-sizing: border-box;
+  position: relative;
+  /* width: 13em;  - apply for fixed size */
+  margin: 0.2em;
+  padding: 0 15px 0 46px;
+  border: none;
+  text-align: left;
+  line-height: 34px;
+  white-space: nowrap;
+  border-radius: 0.2em;
+  font-size: 16px;
+  color: #FFF;
+}
+.loginBtn:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 34px;
+  height: 100%;
+}
+.loginBtn:focus {
+  outline: none;
+}
+.loginBtn:active {
+  box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+}
+
+
+/* Facebook */
+.loginBtn--facebook {
+  border-color: #4C69BA; 
+  border-style: solid;
+  margin-top: 35px;
+  margin-left: 20%;
+  background-color: #4C69BA;
+  background-image: linear-gradient(#4C69BA, #3B55A0);
+  /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
+  text-shadow: 0 -1px 0 #354C8C;
+}
+.loginBtn--facebook:before {
+  border-right: #364e92 1px solid;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
+}
+.loginBtn--facebook:hover,
+.loginBtn--facebook:focus {
+  border-color: white;  
+  background-color: #5B7BD5;
+  background-image: linear-gradient(#5B7BD5, #4864B1);
+}
+
+
+/* Google */
+.loginBtn--google {
+  border-color: #DD4B39;  
+  border-style: solid;
+  margin-top: 418px;
+  margin-left: 22%;
+  /*font-family: "Roboto", Roboto, arial, sans-serif;*/
+  background: #DD4B39;
+}
+.loginBtn--google:before {
+  border-right: #BB3F30 1px solid;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
+}
+.loginBtn--google:hover,
+.loginBtn--google:focus {
+  border-color: white;  
+}
+h3{
+  color: white;
 }
