--- a/css/configuracion.css
+++ b/css/configuracion.css
@@ -10,7 +10,7 @@
     border-radius: 20px;
     border-style: solid;
     height: 665px;
-    width: 320px;
+    width: 380px;
 }
 .header-config{
     display: flex;
@@ -20,23 +20,26 @@
 }
 .logo{
     border-radius: 10px;
+    margin-left: 20px;
+    margin-top: 10px;
     height: 60px;
-    width: 70px;
+    width: 60px;
 
 }
 p{
     color: black;
     font-weight: bold;
-    padding-left: 40px;
-    font-size: large;
+    padding-left: 30px;
+    font-size: x-large;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 .btn_cerrar{
     background-color: #307473;
-    margin-left: 32px;
-    margin-top: 10px;
-    height: 44px;
+    margin-left: 30px;
+    margin-top: 15px;
+    height: 50px;
+    width: 50px;
     border-radius: 30px;
 }
 /*
@@ -94,7 +97,7 @@ p{
 }
 
 .list{
-    margin-left: 10px;
+    margin-left: 40px;
     border-radius: 20px;
     width: 300px;
     height: 563px;
