--- a/css/perfil.css
+++ b/css/perfil.css
@@ -10,25 +10,25 @@
     border-radius: 20px;
     border-style: solid;
     height: 800px;
-    width: 320px;
+    width: 380px;
 }
 .header-perfil{
     display: flex;
     padding-top: 20px;
-    padding-left: 10px;
+    padding-left: 30px;
     padding-right: 10px;
 }
 .logo{
     border-radius: 10px;
-    height: 60px;
-    width: 70px;
+    height: 75px;
+    width: 85px;
 
 }
 .p1{
     color: black;
     font-weight: bold;
-    padding-left: 60px;
-    font-size: large;
+    padding-left: 50px;
+    font-size:x-large;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
@@ -36,7 +36,8 @@
     background-color: #307473;
     margin-left: 60px;
     margin-top: 10px;
-    height: 44px;
+    height: 55px;
+    width: 55px;
     border-radius: 30px;
 }
 .foto{
@@ -47,7 +48,7 @@
 .foto img{
     height: 150px;
     width: 150px;
-    margin-left: 27%;
+    margin-left: 30%;
     margin-top: 25px;
     border-style: solid;
     border-radius: 80px;
@@ -64,7 +65,7 @@
     color: white;
     font-weight: bold;
     width: 100px;
-    margin-left: 25px;
+    margin-left: 50px;
     font-size: large;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -148,7 +149,7 @@
     border-radius: 10px;
 }
 .btn_añadirP{
-    margin-left: 17%;
+    margin-left: 25%;
     height: 35px;
     width: 200px;
     border-radius: 20px;
