--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ input{
     margin-top: 50px ;
 }
 .titulo2{
-    margin-top: 14px;
+    margin-top: 20px;
 }
 #div1 {
     border-color: black;
@@ -56,6 +56,8 @@ input{
 }
 #div1 table td{
     height: 100px;
+    text-align: center;
+    
 }
 #div2 {
     border-color: black;
@@ -70,6 +72,9 @@ input{
    width:100%;
    background-color:whitesmoke;
    border-style: none;
+}
+#div2 table td{
+    text-align: center;
 }
 .btn_aggCita{
     height: 35px;
