arreglo bug de ids

--- a/src/css/crstyle.css
+++ b/src/css/crstyle.css
@@ -39,7 +39,7 @@
 }
 
 .formulario{
-    background: rgb(207, 207, 207);
+    background: #E4DFDA;
     position: absolute;
     border-color: black;
     border-radius: 20px;
