--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,41 +40,20 @@ input{
 #div1 {
     border-color: black;
     background-color: white;
-    overflow:scroll;
+    overflow-y: scroll;
     margin-left: 10%;
     margin-top: 20%;
     height:140px;
     width:78%;
 }
-#div1 table {
-   width:100%;
-   background-color:whitesmoke;
-   border-style: none;
-}
-#div1 table th{
-    position: sticky;
-}
-#div1 table td{
-    height: 100px;
-    text-align: center;
-    
-}
 #div2 {
     border-color: black;
     background-color: white;
-    overflow:scroll;
+    overflow-y: scroll;
     margin-left: 10%;
     margin-top: 30%;
     height:120px;
     width:78%;
-}
-#div2 table {
-   width:100%;
-   background-color:whitesmoke;
-   border-style: none;
-}
-#div2 table td{
-    text-align: center;
 }
 .btn_aggCita{
     height: 35px;
@@ -142,39 +121,32 @@ a:hover{
 }
 
 .contenedor{
-    /*border-style:solid;*/
+    text-align: center;
     height:100%;
-    width:97%;
+    width:100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(12, 1fr);
     grid-column-gap: px;
     grid-row-gap: px;
 }
+.contenedor .info{
+    margin-top: 10%;
+}
 
 .in1{
-    border-style:solid;
+    border-left: solid;
+    border-top: solid;
+    border-bottom: solid;
     height:50px;
 }
 .in2{
-    border-style:solid;
+    border-style: solid;
     height:50px;
-    
 }
 .in3{
-    border-style:solid;
+    border-right: solid;
+    border-top: solid;
+    border-bottom: solid;
     height:50px;
 }
-.in4{
-    border-style:solid;
-    height:50px;
-}
-.in5{
-    border-style:solid;
-    height:50px;
-    
-}
-.in6{
-    border-style:solid;
-    height:50px;
-}  
