arreglo de manejo de nulos en las tablas del perfil

--- a/src/css/perfil.css
+++ b/src/css/perfil.css
@@ -166,49 +166,41 @@
     border-color: white;
     font-style: bright;
 }
+
 #div1 {
     border-color: black;
     background-color: white;
-    overflow:scroll;
-    margin-left: 2%;
-    height:150px;
-    width:95%;
-}
-#div1 table {
-   width:100%;
-   background-color:whitesmoke;
-   border-style: none;
-}
-#div1 table th{
-    position: sticky;
-}
-#div1 table td{
-    height: 50px;
-    text-align: center;
-    
+    overflow-y: scroll;
+    height:145px;
+    width:80%;
+    margin-left: 10%;
 }
 
 .contenedor{
-    /*border-style:solid;*/
+    text-align: center;
     height:100%;
-    width:97%;
+    width:100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(12, 1fr);
     grid-column-gap: px;
     grid-row-gap: px;
+
 }
 
 .in1{
-    border-style:solid;
+    border-left: solid;
+    border-top: solid;
+    border-bottom: solid;
     height:50px;
 }
 .in2{
-    border-style:solid;
+    border-style: solid;
     height:50px;
-    
 }
 .in3{
-    border-style:solid;
+    border-right: solid;
+    border-top: solid;
+    border-bottom: solid;
     height:50px;
 }
