--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,26 +1,21 @@
 *{
-    margin: 2;
-    padding: 0;
     box-sizing: border-box;
 }
 p{
     color: black;
     font-weight: bold;
-    padding-left: 30px;
     font-size: x-large;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 .logo{
     border-radius: 10px;
-    margin-left: 20px;
     margin-top: 10px;
     height: 60px;
     width: 60px;
 }
 .btn_cerrar{
     background-color: #307473;
-    margin-left: 30px;
     margin-top: 15px;
     height: 50px;
     width: 50px;
@@ -28,22 +23,25 @@ p{
 }
 .btn_cerrar1{
     background-color: #307473;
-    margin-left: 15%;
     margin-top: 15px;
     height: 50px;
     width: 50px;
     border-radius: 30px;
 }
+html{
+    width: 100vw;
+    height: 100vh;
+}
 .app{
-    width:380px;
-    height:680px;
+    width: 100vw;
+    height: 100vh;
+    margin-left: -8px;
+    margin-right: -8px;
     background: rgb(255,255,255);
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(58,126,125,1) 52%, rgba(29,68,68,1) 100%);
     overflow-y: auto;
     position: relative;
-    border-color: black;
-    border-radius: 20px;
-    border-style: solid;
+    overflow-x: hidden;
 
 }
 #preloader_1{
@@ -98,24 +96,29 @@ p{
     100% {height:120px;transform:translateY(0px);background:rgba(255,255,255,1);}
 }
 .configuracion{
+    width: 100vw;
+    height: 100vh;
+    margin-left: -8px;
+    margin-right: -8px;
     background: rgb(255,255,255);
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(58,126,125,1) 52%, rgba(29,68,68,1) 100%);
-    border-color: black;
-    border-radius: 20px;
-    border-style: solid;
-    height: 680px;
-    width: 380px;
+    overflow-y: auto;
+    position: relative;
+    overflow-x: hidden;
 }
 .header-config{
     display: flex;
-    padding-top: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 .nav{
     background: transparent;
-    width: 300px;
+    width: 100vw;
     height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 .nav__link{
     margin-top: 10px;
@@ -132,7 +135,6 @@ p{
  color: blue;
 }
 .list{
-    margin-left: 40px;
     border-radius: 20px;
     width: 300px;
     height: 563px;
@@ -178,13 +180,15 @@ p{
 }
 .del{
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 #div2 {
     border-color: black;
     background-color: white;
     overflow-y: scroll;
     margin-left: 10%;
-    margin-top: 10%;
     height:120px;
     width:78%;
 }
@@ -192,7 +196,7 @@ p{
     border-color: black;
     background-color: white;
     overflow-y: scroll;
-    height:145px;
+    height:170px;
     width:100%;
 }
 #div1 {
@@ -250,8 +254,6 @@ p{
 .p1{
     color: black;
     font-weight: bold;
-    padding-left: 40px;
-    padding-right: 50px;
     font-size:x-large;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
@@ -289,8 +291,9 @@ p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .caja {
-    margin:20px auto 40px auto;	
     border:1px solid #d9d9d9;
+    margin-top: 10px;
+    margin-bottom: 10px;
     height:30px;
     margin-left: 10px;
     overflow: hidden;
@@ -307,22 +310,21 @@ select {
     padding: 5px;
     width: 170px    
 }
-select:focus{ outline: none;}
 .caja::after{
     content:"\025be";
     display:table-cell;
-    padding-top:7px;
     text-align:center;
     width:30px;
-    height:30px;
     background-color:#d9d9d9;
-    position:absolute;
     top:0;
     right:0px;	
     pointer-events: none;
 }
-.seccion4{
-    margin-left: 20%;
+.seccion4{ 
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 .seccion2{
    display: block;
@@ -386,8 +388,16 @@ select:focus{ outline: none;}
 }
 .header-main{
     display: flex;
-    padding-top: 20px;
-    padding-left: 0%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.main-buttons{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100px;
 }
 .btn_perfil{
     background-color: #307473;
@@ -399,10 +409,25 @@ select:focus{ outline: none;}
     margin-top: 10px;
     height: 44px;
 }
+.btnCitas{
+    margin-left: 10%;
+    display: flex;
+    width: 80vw;
+    justify-content: space-around;
+    color: white;
+}
 .btnCitas input{
     border-radius: 30px;
     margin-top: 10px;
     height: 44px;
+}
+.btnMeds{
+
+    margin-left: 10%;
+    display: flex;
+    width: 80vw;
+    justify-content: space-around;
+    color: white;
 }
 .btnMeds input{
     border-radius: 30px;
@@ -435,7 +460,6 @@ input{
 }
 .btn_delCita{
     height: 35px;
-    margin-left: 2%;
     width: 150px;
     border-radius: 20px;
     color: black;
@@ -497,42 +521,27 @@ a:hover{
 .titulo{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
-    margin-left: 15%;
     height: 50px;
-    width: 100px;
+    width: 120px;
     border-radius: 30px;
 }
 .titulo1{
-    position: relative;
-    left: 10%;
-    width: 200px;
-    margin-top: 50px ;
+    margin-left: 10%;
+    width: 80vw;
     color: white;
 }
 .titulo2{
-    position:relative;
-    top: 5%;
-    left: 10%;
-    width: 200px;
-    margin-top: 20px;
+    margin-left: 10%;
+    width: 80vw;
     color: white;
 }
 .titulo3{
-    margin-left: 55px;
     height: 40px;
-    width: 200px;
+    width: 100%;
     color: black;
+
 }
-.btnCitas{
-    position: absolute;
-    display: flex;
-    left: 10%;
-}
-.btnMeds{
-    position: absolute;
-    display: flex;
-    left: 7%;
-}
+
 h2{
     height: 40px;
 }
@@ -547,9 +556,10 @@ h3{
     border-style: solid;
     bottom: 10%;
     width: 88%;
-    height: 83%;
+    height: 84vh;
     left: 5%;
     text-align: center;
+    display: block;
     top: 15%;
 }
 .citas{
@@ -564,6 +574,9 @@ h3{
     border-radius: 20px;
     border-style: solid;
 }
+.enviar{
+    margin-top: 8px;
+}
 .btn_enviar{
     height: 35px;
     width: 200px;
@@ -572,16 +585,14 @@ h3{
     font-weight: bold;
     border-style: solid;
     background: rgb(255,255,255);
-    position: absolute;
     border-color: black;
-    bottom: 1%;
-    left: 25%;
 }
 .btn_enviar:hover{
     border-color: white;
     font-style: bright;
 }
 .btn_enviar1{
+    margin-top: 10%;
     height: 35px;
     width: 200px;
     border-radius: 20px;
@@ -589,10 +600,7 @@ h3{
     font-weight: bold;
     border-style: solid;
     background: rgb(255,255,255);
-    position: absolute;
     border-color: black;
-    bottom: 5%;
-    left: 22%;
 }
 .btn_enviar1:hover{
     border-color: white;
