--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,9 @@ p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+a{
+    color: black;
+}
 .logo{
     border-radius: 10px;
     margin-top: 10px;
@@ -114,6 +117,25 @@ body{
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
+}
+h3{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+.creditos{
+    padding-left: 10%;
+}
+.p_creditos{
+    margin-top: 20px;
+    width: 80%;
+    height: 80%;
+    padding-left: 10px;
+    font-size:medium;
+    text-align: justify;
+    font-weight: normal;
+    color: rgb(255, 255, 255);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 .nav{
     background: transparent;
